<resources>
    <string name="app_name">BusinessCard</string>
    <string name="aboutTitle">Danny tech</string>
    <string name="aboutMessage">Android development tips and tricks app</string>
    <string name="positiveMessage">Ok</string>
    <string name="contact">
        Name: Daniel Waiguru \n
        Email: danielirungu91@gmail.com \n
        Location: Nairobi Kenya \n
        Telephone: 0773331946
    </string>
    <string name="danny_tech">Danny.tech</string>
    <string name="android_dev_tips">Android Dev Tips</string>
    <string name="next_tip">Next Tip</string>
    <string name="android_dev">Android Dev Tips</string>
    <string name="todo">TODO</string>
</resources>